# emtemp

./: .gitignore  CMakeLists.txt  build.sh  embuild.sh  embuildrel.sh  emconf.sh  emdebconf.sh  emforcebuild.sh  erun.sh  main.cpp  server.js  shell.html  wembuild.bat  wemdebconf.bat
gl46/include/glad/: glad.h
gl46/src/: glad.c
gles3/include/glad/: glad.h
gles3/src/: glad.c
src/: desktop_main.cpp  em_main.cpp  main.cpp  main.hpp  pch.h
